# statemachine

./: CMakeLists.txt  README.md  build.sh
inc/: SMTypes.h  engine.h  lineno.h  timer.h
src/: engine.c  lexan.l  lineno.c  statemachine.c  statemachine.y  timer.c
test/: example1.sm  example2.sm
